--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
 
 body {
 	font-family: 'Montserrat', sans-serif;
-
 }
 
 p {
@@ -18,9 +17,14 @@ li {
 	font-size: 15px;
 }
 
+input,
+textarea {
+	font-family: 'Montserrat', sans-serif;
+}
+
 .container {
 	width: 95%;
-	height: 100%;
+	/* height: 100%; */
 	margin: 20px auto;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
@@ -83,8 +87,14 @@ a:hover {
 	color: #fbb03b;
 }
 
-.rolling-images {
+/* IMAGE CYCLE */
+.cycle-images-container {
 	grid-area: rollingImages;
+	border: 1px solid black;
+}
+
+.cycle-images {
+	display: none;
 }
 
 /* TEXTS */
@@ -109,7 +119,7 @@ a:hover {
 	grid-area: imageTwo;
 }
 
-.max {
+.dog-cycle {
 	height: 100%;
 	width: 100%;
 }
@@ -165,6 +175,23 @@ a:hover {
 
 }
 
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
 
 /* TABLETS */
 @media screen and (max-width: 1025px) {
