--- a/contact/contact.css
+++ b/contact/contact.css
@@ -16,9 +16,6 @@
 
 form {
 	box-sizing: border-box;
-	 /* display: flex;
-	justify-content: center;
-	align-items: center; */
 	border-top: 1px solid black;
 	padding: 10px;
 }
@@ -84,8 +81,8 @@ textarea {
 	width: 100%;
     height: 150px;
 	resize: none;
-	padding-top: 15px;
-	font-size: 15px;
+	padding: 12px 2px 1px 15px;
+	/* font-size: 15px; */
 }
 
 .text-one {
