--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ textarea {
 
 .container {
 	width: 95%;
-	/* height: 100%; */
+	height: 100%;
 	margin: 20px auto;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
@@ -33,10 +33,6 @@ textarea {
 .logo {
 	grid-area: logo;
 	display: flex;
-
-	/* align-items: flex-start;
-	flex-flow: wrap;
-	align-content: space-round; */
 }
 
 .logo-header {
@@ -90,11 +86,17 @@ a:hover {
 /* IMAGE CYCLE */
 .cycle-images-container {
 	grid-area: rollingImages;
-	border: 1px solid black;
+	border-top: 2px solid #fbb03b;
+	border-bottom: 2px solid #fbb03b;
 }
 
 .cycle-images {
 	display: none;
+}
+
+.dog-cycle {
+	height: 100%;
+	width: 100%;
 }
 
 /* TEXTS */
@@ -119,24 +121,13 @@ a:hover {
 	grid-area: imageTwo;
 }
 
-.dog-cycle {
-	height: 100%;
-	width: 100%;
-}
-
 .logo-image {
 	height: 200px;
 }
 
-/* .logo-header {
-	display: inline;
-	top: 0;
-} */
-
 .main-image {
 	width: 336px;
 }
-
 
 /* FOOTER */
 .footer {
@@ -175,7 +166,7 @@ a:hover {
 
 }
 
-/* Fading animation */
+/* FADE ANIMATION TO IMAGES */
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
@@ -195,10 +186,6 @@ a:hover {
 
 /* TABLETS */
 @media screen and (max-width: 1025px) {
-	.logo-image {
-		width: 100%;
-	}
-
 	.image {
 		height: 100%;
 	}
@@ -207,16 +194,39 @@ a:hover {
 		font-size: 1.7em;
 	}
 
-	a {
-		font-size: 20px;
+	.navbar a {
+		font-size: 25px;
+	}
+
+	.navbar {
+		gap: 2%
+	}
+
+	p, li {
+		font-size: 15px;
+	}
+
+	.contact-footer,
+	.navigate-footer,
+	.times-footer {
+		font-size: 17px;
 	}
 
 }
 
 /* MOBILES */
 @media screen and (max-width: 767px) {
-	.logo-image {
-		width: 100%;
+	p, li {
+		font-size: 12px;
+	}
+
+	.navbar {
+		gap: 2%
+	}
+
+	.navbar a {
+		font-size: 15px;
+
 	}
 
 	.footer {
@@ -225,11 +235,39 @@ a:hover {
 		margin-top: 10px;
 	}
 
-	h1 {
-		font-size: 1em;
+	.contact-footer,
+	.navigate-footer,
+	.times-footer {
+		font-size: 10px;
 	}
 
-	p {
-		font-size: 12px;
+	.contact-footer,
+	.navigate-footer {
+		margin-bottom: 15px;
+		border-right: none;
+	}
+
+	.navigate-footer,
+	.times-footer {
+		border-top: 1px solid black;
+	}
+
+	.navigate-footer a {
+		font-size: 10px;
+	}
+
+
+	h1.logo-header {
+		font-size: 1.7em;
+	}
+
+	.logo-image {
+		height: 100px;
+	}
+
+	.contact-info {
+		margin-top: 5px;
+		margin-left: 1px;
+		font-size: 10px;
 	}
 }
