--- a/dogs/dogs.css
+++ b/dogs/dogs.css
@@ -1,3 +1,12 @@
+h2 {
+	margin-bottom: 0;
+}
+
+h3 {
+	font-size: 13px;
+	font-style: italic;
+}
+
 .container {
 	grid-template-rows: 200px 50px 1000px 100px auto;
 	grid-template-areas:
@@ -66,6 +75,11 @@
 .main-image-two,
 .main-image-three {
 	width: 336px;
+	margin-left: 15px;
+}
+
+.main-image-two {
+	margin-bottom: 15px;
 }
 
 .main-image-two,
@@ -74,7 +88,83 @@
 }
 
 
-/* Tablets */
+/* ZOOMING IMAGE WHEN CLICKED */
+#dogImage,
+#dogImageTwo,
+#dogImageThree {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#dogImage:hover,
+#dogImageTwo:hover,
+#dogImageThree:hover {
+	opacity: 0.7;
+}
+
+.zoom {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.9);
+}
+
+.zoom-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+.zoom-content, #caption {
+  animation-name: zoom;
+  animation-duration: 0.5s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+.closeButton {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+/* TABLETS */
 @media screen and (max-width: 1025px) {
 	.container {
 		grid-template-rows: auto auto 550px;
@@ -88,9 +178,13 @@
   	  	"textThree textThree imageThree imageThree"
 		"footer footer footer footer";
 	}
+
+	.zoom-content {
+		width: 100%
+	}
 }
 
-/* Mobile phones */
+/* MOBILES */
 @media screen and (max-width: 767px) {
 	.container {
 		grid-template-rows: auto auto 250px;
@@ -124,5 +218,9 @@
 	.image-two,
 	.image-three {
 		border-top: none;
+	}
+
+	.zoom-content {
+		width: 100%
 	}
 }
