--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ h1, h2, h3 {
 	font-weight: 500;
 }
 
+h2 {
+	margin-top: 0;
+}
+
 li {
 	font-size: 15px;
 }
@@ -34,10 +38,6 @@ textarea {
 	grid-area: logo;
 	display: flex;
 }
-
-/* .dog-quote {
-	margin-left: auto;
-} */
 
 .logo-header {
 	font-size: 50px;
@@ -164,18 +164,16 @@ a:hover {
 	color: black;
 }
 
-
 .copyright-footer {
 	align-items: stretch;
-
 }
 
 /* FADE ANIMATION TO IMAGES */
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: 2s;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 2s;
 }
 
 @-webkit-keyframes fade {
@@ -188,6 +186,18 @@ a:hover {
   to {opacity: 1}
 }
 
+/* MEDIUM DESKTOPS */
+@media screen and (max-width: 1200px) {
+	.navbar {
+		gap: 2%
+	}
+
+	.navbar a {
+		font-size: 20px;
+	}
+}
+
+
 /* TABLETS */
 @media screen and (max-width: 1025px) {
 	.image {
@@ -196,6 +206,7 @@ a:hover {
 
 	h2 {
 		font-size: 1.7em;
+		margin-top: 15px;
 	}
 
 	.navbar a {
