--- a/dogs/dogs.css
+++ b/dogs/dogs.css
@@ -161,6 +161,26 @@ h2 {
 	cursor: pointer;
 }
 
+/* MEDIUM DESKTOPS */
+@media screen and (max-width: 1200px) {
+	.container {
+		grid-template-rows: auto auto 550px 115px;
+		grid-template-areas:
+		"logo logo logo logo"
+		"navbar navbar navbar navbar"
+		"rollingImages rollingImages rollingImages rollingImages"
+		"header header header header"
+		"textOne textOne textOne image"
+		"textTwo textTwo textTwo imageTwo"
+  	  	"textThree textThree textThree imageThree"
+		"footer footer footer footer";
+	}
+
+	.zoom-content {
+		width: 100%
+	}
+
+}
 
 /* TABLETS */
 @media screen and (max-width: 1025px) {
@@ -171,9 +191,9 @@ h2 {
 		"navbar navbar navbar navbar"
 		"rollingImages rollingImages rollingImages rollingImages"
 		"header header header header"
-		"textOne textOne image image"
-		"textTwo textTwo imageTwo imageTwo"
-  	  	"textThree textThree imageThree imageThree"
+		"textOne textOne textOne image"
+		"textTwo textTwo textTwo imageTwo"
+  	  	"textThree textThree textThree imageThree"
 		"footer footer footer footer";
 	}
 
