--- a/service/service.css
+++ b/service/service.css
@@ -40,6 +40,20 @@ tbody tr:last-of-type {
 }
 
 /* TABLETS */
+@media screen and (max-width: 1200px) {
+	.container {
+		grid-template-rows: auto auto 550px 100px;
+		grid-template-areas:
+		"logo logo logo logo"
+		"navbar navbar navbar navbar"
+		"rollingImages rollingImages rollingImages rollingImages"
+		"header header header header"
+        "textOne textOne textOne textOne"
+		"footer footer footer footer";
+	}
+}
+
+/* TABLETS */
 @media screen and (max-width: 1025px) {
 	.container {
 		grid-template-rows: auto auto 550px 100px;
@@ -53,7 +67,6 @@ tbody tr:last-of-type {
 	}
 
 	table {
-		width: 100%;
 		font-size: 18px;
 	}
 }
@@ -72,7 +85,6 @@ tbody tr:last-of-type {
 	}
 
 	table {
-		width: 100%;
 		font-size: 10px;
 	}
 
