--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -70,7 +70,7 @@
 	cursor: pointer;
 }
 
-/* TABLETS */
+/* MEDIUM DESKTOP */
 @media screen and (max-width: 1200px) {
 	.container {
 		grid-template-rows: auto auto 700px 100px;
